style.css
/*
 Theme Name:   Una Wordpress Theme
 Theme URI:    
 Description:  Twenty Fifteen Child Theme
 Author:       Paolo Gallardo
 Author URI:   paologallardo2287.x10host.com
 Template:     twentyfifteen
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
*/
.main-navigation ul,
.main-navigation li{
    border: 0;
}
.search-form{
    position: relative;
}
.search-button{
    position: absolute;
    top: 0;
    right:  0;
}
@media screen and (min-width: 59.6875em){
    .site-header{
        margin: 20% 0 5%;
    }
    .site-branding{
        margin: 0 0 10%;
    }
    .sidebar-form{
        margin: 0 20%;
    }
}

